--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "next-pwa": "^5.6.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
